# result

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: cpack.cmake  install.cmake
common/cpack/: CMakeLists.txt  cpack.cmake
common/install/: CMakeLists.txt  install.cmake
include/cpp_result/: result.hpp
platform/linux/: CMakeLists.txt
platform/windows/: CMakeLists.txt
result/: result.hpp
src/: result.hpp
test/: CMakeLists.txt  result.cpp
